--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,19 @@
 body {
     background-color: #111215;
     margin: 0;
+    padding: 0;
     font-family: 'Poppins', sans-serif;
     color:#f2f7fc;
+    
 }
 
+.main{
+    background: url(http://wp1.themexlab.com/wp/cards/wp-content/themes/cards/img/bg1.jpg) no-repeat center center ;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
 
 div {
     width: 90%;
@@ -25,15 +34,16 @@ nav {
     margin: 0 auto;
     position: sticky;
     top: 0;
-    background-color: #111215;
-    height: 40px;
+    background-color: chocolate;
+    /* height: 40px; */
 }
 
 nav ul {
     position: sticky;
-    background-color: chocolate;
-    /* padding:auto; */
     margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 1200px;
 }
 
 
@@ -117,18 +127,7 @@ h4.inline-h4{
     list-style-position: inside;
 }
 
-/* ol {
-    background: #ff9999;
-    padding: 10px;
-    width: 200px;
-  }
 
-ol li {
-    background: #ffe5e5;
-    color: darkred;
-    padding: 5px;
-    margin-left: 35px;
-  } */
 
   input {
     padding: 12px 20px;
@@ -161,4 +160,107 @@ input:focus {
 
 input[type=submit]:hover {
     background-color: aquamarine;
+}
+
+.container {
+    width: 500px;
+    height: 570px;
+    margin: auto;
+    margin-top: 20px;
+    /* padding-top: 30px; */
+    background: url(http://wp1.themexlab.com/wp/cards/wp-content/themes/cards/img/bg-card2.png) repeat-x right top #f4f4f4;
+}
+
+.container img{
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto; 
+    border:3px rgb(196, 222, 223) solid;
+}
+
+.container h1, h4 {
+    color: #111215;
+    text-align: center;
+    margin-bottom: 5px;
+    margin-top: 10px;
+}
+
+.container h4 {
+    margin-top: 0px;
+}
+
+.container p {
+    color: #111215;
+    font-size: small;
+    padding: 15px;
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+
+.container hr {
+    border: none;
+    height: 1px;
+    width: 100%;
+    background: url(http://wp1.themexlab.com/wp/cards/wp-content/themes/cards/img/hr1.png) no-repeat center center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.container .contact {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    padding: 10px;
+    background: url(http://wp1.themexlab.com/wp/cards/wp-content/themes/cards/img/bg-btn.png)
+    no-repeat center center #08aeac;
+    transition: 0.6s;
+    font-size: 13px;
+    text-align: center;
+}
+
+.container .contact:hover {
+    background-color: red;
+}
+
+#decor {
+    background-color: red;
+    width: 500px;
+    height: 5px;
+    display: block;
+}
+
+.card {
+    padding-top: 30px;
+}
+
+#icons {
+    margin-left: auto;
+    margin-right: auto;
+    width: 250px;
+    text-align: center;
+}
+
+#icons i {
+    color: white;
+    background-color: #333333;
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    text-align: center;
+    transition: all 0.3s ease-in-out;
+    font-size: 14px;
+    line-height: 30px;
+    margin-right:10px;
+}
+
+.fa-brands, .fab {
+    font-weight: 400;
+}
+
+#icons i:hover {
+    background-color: #08aeac;
 }
