--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,7 @@ nav ul {
 nav li {
     list-style-type: none;
     padding-top: 5px;
-    margin: 0 0 0 20px;
+    /*   */
     display: inline-block;
     width: 150px;
     font-size: 17px;
@@ -263,4 +263,16 @@ input[type=submit]:hover {
 
 #icons i:hover {
     background-color: #08aeac;
+}
+
+.gallery {
+    width: 30%;
+    height: 250px;
+    display: inline-block;
+    margin: 10px;
+}
+
+.img_cont {
+    margin-left: auto;
+    margin-right: auto;
 }
